--- a/docs/publications.ipynb
+++ b/docs/publications.ipynb
@@ -17,22 +17,22 @@
    },
    "outputs": [],
    "source": [
+    "import re\n",
     "import requests\n",
     "from IPython.display import HTML, display\n",
     "\n",
     "# === CONFIG ===\n",
-    "ORCID_ID = \"0000-0002-0705-7662\"   # replace if needed\n",
+    "ORCID_ID = \"0000-0002-0705-7662\"   # your ORCID iD\n",
     "API_BASE = \"https://pub.orcid.org/v3.0\"\n",
     "# ==============\n",
     "\n",
-    "# ORCID session\n",
     "session = requests.Session()\n",
     "session.headers.update({\"Accept\": \"application/json\"})\n",
     "\n",
-    "def get_all_works(orcid):\n",
-    "    \"\"\"Return list of put-codes for all works.\"\"\"\n",
+    "\n",
+    "def get_all_put_codes(orcid: str):\n",
     "    url = f\"{API_BASE}/{orcid}/works\"\n",
-    "    r = session.get(url)\n",
+    "    r = session.get(url, timeout=30)\n",
     "    r.raise_for_status()\n",
     "    works = r.json()\n",
     "\n",
@@ -42,69 +42,209 @@
     "            put_codes.append(ws[\"put-code\"])\n",
     "    return put_codes\n",
     "\n",
-    "def get_work_detail(orcid, put_code):\n",
-    "    \"\"\"Fetch full metadata for a single work.\"\"\"\n",
+    "\n",
+    "def get_work_detail(orcid: str, put_code: int):\n",
     "    url = f\"{API_BASE}/{orcid}/work/{put_code}\"\n",
-    "    r = session.get(url)\n",
+    "    r = session.get(url, timeout=30)\n",
     "    r.raise_for_status()\n",
     "    return r.json()\n",
     "\n",
+    "\n",
+    "def _norm(s):\n",
+    "    return re.sub(r\"\\s+\", \" \", (s or \"\").strip())\n",
+    "\n",
+    "\n",
+    "def extract_external_ids(work):\n",
+    "    ext = work.get(\"external-ids\", {}).get(\"external-id\", []) or []\n",
+    "    out = {}\n",
+    "    for e in ext:\n",
+    "        t = (e.get(\"external-id-type\") or \"\").lower()\n",
+    "        v = e.get(\"external-id-value\") or \"\"\n",
+    "        u = e.get(\"external-id-url\", {}).get(\"value\") or \"\"\n",
+    "        if t and v:\n",
+    "            out[t] = u or v\n",
+    "    return out\n",
+    "\n",
+    "\n",
+    "def extract_contributors(work):\n",
+    "    \"\"\"\n",
+    "    Returns authors in (best-effort) order.\n",
+    "    ORCID provides contributor-sequence: FIRST/ADDITIONAL.\n",
+    "    Sometimes ordering among ADDITIONAL is not reliable; we keep their original API order.\n",
+    "    \"\"\"\n",
+    "    contribs = work.get(\"contributors\", {}).get(\"contributor\", []) or []\n",
+    "    people = []\n",
+    "    for c in contribs:\n",
+    "        name = c.get(\"credit-name\", {}).get(\"value\") or \"\"\n",
+    "        seq = c.get(\"contributor-attributes\", {}).get(\"contributor-sequence\") or \"\"\n",
+    "        role = c.get(\"contributor-attributes\", {}).get(\"contributor-role\") or \"\"\n",
+    "        people.append({\"name\": _norm(name), \"seq\": seq, \"role\": role})\n",
+    "\n",
+    "    first = [p for p in people if p[\"seq\"] == \"FIRST\"]\n",
+    "    additional = [p for p in people if p[\"seq\"] != \"FIRST\"]\n",
+    "    ordered = first + additional\n",
+    "\n",
+    "    # If there are no credit-names, return empty list\n",
+    "    ordered = [p[\"name\"] for p in ordered if p[\"name\"]]\n",
+    "    return ordered\n",
+    "\n",
+    "\n",
+    "def name_to_apa(full_name: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Convert 'First Middle Last' -> 'Last, F. M.'\n",
+    "    Handles simple cases well. Complex surnames may not be perfect.\n",
+    "    \"\"\"\n",
+    "    parts = [p for p in full_name.split() if p]\n",
+    "    if len(parts) == 1:\n",
+    "        return parts[0]\n",
+    "    last = parts[-1]\n",
+    "    initials = []\n",
+    "    for p in parts[:-1]:\n",
+    "        # keep first character for initials, ignore punctuation\n",
+    "        ch = re.sub(r\"[^A-Za-zÀ-ÖØ-öø-ÿ]\", \"\", p)[:1]\n",
+    "        if ch:\n",
+    "            initials.append(ch.upper() + \".\")\n",
+    "    return f\"{last}, {' '.join(initials)}\".strip()\n",
+    "\n",
+    "\n",
+    "def format_authors_apa(authors):\n",
+    "    \"\"\"\n",
+    "    APA 7-ish:\n",
+    "    - Up to 20 authors: list all, with '&' before last.\n",
+    "    - More than 20: first 19, …, last (APA exact rule uses ellipsis).\n",
+    "    \"\"\"\n",
+    "    if not authors:\n",
+    "        return \"\"  # We will omit authors if missing\n",
+    "\n",
+    "    apa = [name_to_apa(a) for a in authors]\n",
+    "\n",
+    "    if len(apa) <= 2:\n",
+    "        return \" & \".join(apa)\n",
+    "    if len(apa) <= 20:\n",
+    "        return \", \".join(apa[:-1]) + \", & \" + apa[-1]\n",
+    "\n",
+    "    # >20\n",
+    "    first_19 = apa[:19]\n",
+    "    last = apa[-1]\n",
+    "    return \", \".join(first_19) + \", …, \" + last\n",
+    "\n",
+    "\n",
     "def extract_info(work):\n",
-    "    \"\"\"Extract title, year and DOI from ORCID work.\"\"\"\n",
-    "    title = (\n",
-    "        work.get(\"title\", {})\n",
-    "            .get(\"title\", {})\n",
-    "            .get(\"value\", \"\")\n",
-    "    )\n",
+    "    title = _norm(work.get(\"title\", {}).get(\"title\", {}).get(\"value\"))\n",
+    "    subtitle = _norm(work.get(\"title\", {}).get(\"subtitle\", {}).get(\"value\"))\n",
+    "    if subtitle:\n",
+    "        title = f\"{title}: {subtitle}\" if title else subtitle\n",
     "\n",
-    "    pub_date = work.get(\"publication-date\", {})\n",
+    "    journal = _norm(work.get(\"journal-title\", {}).get(\"value\"))\n",
+    "    work_type = _norm(work.get(\"type\"))  # e.g., JOURNAL_ARTICLE\n",
+    "\n",
+    "    pub_date = work.get(\"publication-date\", {}) or {}\n",
     "    year = pub_date.get(\"year\", {}).get(\"value\")\n",
+    "    month = pub_date.get(\"month\", {}).get(\"value\")\n",
+    "    day = pub_date.get(\"day\", {}).get(\"value\")\n",
     "\n",
-    "    doi = None\n",
-    "    for ext in work.get(\"external-ids\", {}).get(\"external-id\", []):\n",
-    "        if ext.get(\"external-id-type\") == \"doi\":\n",
-    "            doi = ext.get(\"external-id-value\")\n",
-    "            break\n",
+    "    ext = extract_external_ids(work)\n",
+    "    doi = ext.get(\"doi\")\n",
+    "    doi_url = None\n",
+    "    if doi:\n",
+    "        # If it's already a URL, keep it; otherwise build doi.org link\n",
+    "        doi_url = doi if doi.startswith(\"http\") else f\"https://doi.org/{doi}\"\n",
+    "\n",
+    "    url = ext.get(\"url\") or ext.get(\"uri\")  # sometimes people store a URL as ext-id\n",
+    "\n",
+    "    authors = extract_contributors(work)\n",
     "\n",
     "    return {\n",
-    "        \"title\": title.strip(),\n",
+    "        \"authors\": authors,\n",
     "        \"year\": year,\n",
-    "        \"doi\": doi\n",
+    "        \"month\": month,\n",
+    "        \"day\": day,\n",
+    "        \"title\": title,\n",
+    "        \"journal\": journal,\n",
+    "        \"type\": work_type,\n",
+    "        \"doi_url\": doi_url,\n",
+    "        \"fallback_url\": url,\n",
     "    }\n",
     "\n",
-    "def render_publication_list(records):\n",
-    "    \"\"\"Render publications as a clean HTML bullet list.\"\"\"\n",
-    "    items = []\n",
     "\n",
-    "    for r in records:\n",
-    "        title = r[\"title\"] or \"Untitled\"\n",
-    "        year = r[\"year\"]\n",
-    "        doi = r[\"doi\"]\n",
-    "\n",
-    "        if doi:\n",
-    "            link = f\"https://doi.org/{doi}\"\n",
-    "            title_html = f'<a href=\"{link}\" target=\"_blank\">{title}</a>'\n",
-    "        else:\n",
-    "            title_html = title\n",
-    "\n",
-    "        year_html = f\" ({year})\" if year else \"\"\n",
-    "        items.append(f\"<li>{title_html}{year_html}</li>\")\n",
-    "\n",
-    "    html = f\"\"\"\n",
-    "    <ul style=\"line-height:1.6; margin-left:1.2em;\">\n",
-    "        {''.join(items)}\n",
-    "    </ul>\n",
+    "def apa_reference(rec):\n",
     "    \"\"\"\n",
+    "    Best-effort APA-style reference:\n",
+    "    Authors. (Year). Title. Journal. https://doi.org/...\n",
+    "    If journal missing, we omit it.\n",
+    "    If authors missing, start with title.\n",
+    "    \"\"\"\n",
+    "    authors_str = format_authors_apa(rec[\"authors\"])\n",
+    "    year = rec[\"year\"] or \"n.d.\"\n",
+    "    title = rec[\"title\"] or \"Untitled work\"\n",
+    "    journal = rec[\"journal\"]\n",
+    "\n",
+    "    # APA: sentence case for titles; we won't aggressively transform (risk messing proper nouns)\n",
+    "    title_part = f\"{title}.\"\n",
+    "\n",
+    "    if authors_str:\n",
+    "        head = f\"{authors_str} ({year}). \"\n",
+    "    else:\n",
+    "        head = f\"{title_part} ({year}). \"\n",
+    "        title_part = \"\"  # already used as head\n",
+    "\n",
+    "    journal_part = f\"{journal}. \" if journal else \"\"\n",
+    "    link = rec[\"doi_url\"] or rec[\"fallback_url\"]\n",
+    "\n",
+    "    link_part = f'{link}' if link else \"\"\n",
+    "\n",
+    "    # Build final\n",
+    "    if authors_str:\n",
+    "        ref = f\"{head}{title_part} {journal_part}{link_part}\".strip()\n",
+    "    else:\n",
+    "        # Title already included before (Year)\n",
+    "        ref = f\"{head}{journal_part}{link_part}\".strip()\n",
+    "\n",
+    "    # Clean double spaces\n",
+    "    ref = re.sub(r\"\\s{2,}\", \" \", ref)\n",
+    "    return ref\n",
+    "\n",
+    "\n",
+    "def render_apa_list(records):\n",
+    "    items = []\n",
+    "    for rec in records:\n",
+    "        ref = apa_reference(rec)\n",
+    "\n",
+    "        # turn DOI/URL at end into clickable link if present\n",
+    "        if rec[\"doi_url\"]:\n",
+    "            link = rec[\"doi_url\"]\n",
+    "            safe = ref.replace(link, f'<a href=\"{link}\" target=\"_blank\">{link}</a>')\n",
+    "        elif rec[\"fallback_url\"] and rec[\"fallback_url\"].startswith(\"http\"):\n",
+    "            link = rec[\"fallback_url\"]\n",
+    "            safe = ref.replace(link, f'<a href=\"{link}\" target=\"_blank\">{link}</a>')\n",
+    "        else:\n",
+    "            safe = ref\n",
+    "\n",
+    "        items.append(f\"<li style='margin: 0.4em 0;'>{safe}</li>\")\n",
+    "\n",
+    "    html = \"\"\"\n",
+    "    <div style=\"line-height:1.55;\">\n",
+    "      <ol style=\"padding-left: 1.3em; margin: 0.2em 0;\">\n",
+    "        %s\n",
+    "      </ol>\n",
+    "    </div>\n",
+    "    \"\"\" % \"\\n\".join(items)\n",
+    "\n",
     "    return HTML(html)\n",
     "\n",
+    "\n",
     "# === RUN ===\n",
-    "put_codes = get_all_works(ORCID_ID)\n",
+    "put_codes = get_all_put_codes(ORCID_ID)\n",
     "records = [extract_info(get_work_detail(ORCID_ID, pc)) for pc in put_codes]\n",
     "\n",
-    "# sort newest first\n",
-    "records = sorted(records, key=lambda x: x[\"year\"] or \"\", reverse=True)\n",
+    "# newest first (unknown years at bottom)\n",
+    "def sort_key(r):\n",
+    "    y = r[\"year\"]\n",
+    "    return int(y) if (y and str(y).isdigit()) else -1\n",
     "\n",
-    "display(render_publication_list(records))"
+    "records = sorted(records, key=sort_key, reverse=True)\n",
+    "\n",
+    "display(render_apa_list(records))\n"
    ]
   },
   {
