--- a/docs/publications.ipynb
+++ b/docs/publications.ipynb
@@ -13,7 +13,8 @@
    "execution_count": null,
    "id": "4cf95d24-6d63-4460-b490-cd50743a9f6b",
    "metadata": {
-    "is_executing": true
+    "is_executing": true,
+    "nbsphinx": "hidden"
    },
    "outputs": [],
    "source": [
@@ -272,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
