--- a/docs/publications.ipynb
+++ b/docs/publications.ipynb
@@ -32,6 +32,7 @@
     "\n",
     "\n",
     "def get_all_put_codes(orcid: str):\n",
+    "    \"\"\"Return list of put-codes for all works.\"\"\"\n",
     "    url = f\"{API_BASE}/{orcid}/works\"\n",
     "    r = session.get(url, timeout=30)\n",
     "    r.raise_for_status()\n",
@@ -45,6 +46,7 @@
     "\n",
     "\n",
     "def get_work_detail(orcid: str, put_code: int):\n",
+    "    \"\"\"Fetch full metadata for a single work.\"\"\"\n",
     "    url = f\"{API_BASE}/{orcid}/work/{put_code}\"\n",
     "    r = session.get(url, timeout=30)\n",
     "    r.raise_for_status()\n",
@@ -56,12 +58,13 @@
     "\n",
     "\n",
     "def extract_external_ids(work):\n",
-    "    ext = work.get(\"external-ids\", {}).get(\"external-id\", []) or []\n",
+    "    \"\"\"Collect external ids (doi, url, pmid, isbn, etc.) into a dict.\"\"\"\n",
+    "    ext = (work.get(\"external-ids\") or {}).get(\"external-id\") or []\n",
     "    out = {}\n",
     "    for e in ext:\n",
     "        t = (e.get(\"external-id-type\") or \"\").lower()\n",
     "        v = e.get(\"external-id-value\") or \"\"\n",
-    "        u = e.get(\"external-id-url\", {}).get(\"value\") or \"\"\n",
+    "        u = ((e.get(\"external-id-url\") or {}).get(\"value\")) or \"\"\n",
     "        if t and v:\n",
     "            out[t] = u or v\n",
     "    return out\n",
@@ -69,39 +72,35 @@
     "\n",
     "def extract_contributors(work):\n",
     "    \"\"\"\n",
-    "    Returns authors in (best-effort) order.\n",
+    "    Best-effort author list in order.\n",
     "    ORCID provides contributor-sequence: FIRST/ADDITIONAL.\n",
-    "    Sometimes ordering among ADDITIONAL is not reliable; we keep their original API order.\n",
     "    \"\"\"\n",
-    "    contribs = work.get(\"contributors\", {}).get(\"contributor\", []) or []\n",
+    "    contribs = (work.get(\"contributors\") or {}).get(\"contributor\") or []\n",
     "    people = []\n",
     "    for c in contribs:\n",
-    "        name = c.get(\"credit-name\", {}).get(\"value\") or \"\"\n",
-    "        seq = c.get(\"contributor-attributes\", {}).get(\"contributor-sequence\") or \"\"\n",
-    "        role = c.get(\"contributor-attributes\", {}).get(\"contributor-role\") or \"\"\n",
-    "        people.append({\"name\": _norm(name), \"seq\": seq, \"role\": role})\n",
+    "        name = ((c.get(\"credit-name\") or {}).get(\"value\")) or \"\"\n",
+    "        attrs = c.get(\"contributor-attributes\") or {}\n",
+    "        seq = attrs.get(\"contributor-sequence\") or \"\"\n",
+    "        people.append({\"name\": _norm(name), \"seq\": seq})\n",
     "\n",
     "    first = [p for p in people if p[\"seq\"] == \"FIRST\"]\n",
     "    additional = [p for p in people if p[\"seq\"] != \"FIRST\"]\n",
     "    ordered = first + additional\n",
     "\n",
-    "    # If there are no credit-names, return empty list\n",
-    "    ordered = [p[\"name\"] for p in ordered if p[\"name\"]]\n",
-    "    return ordered\n",
+    "    return [p[\"name\"] for p in ordered if p[\"name\"]]\n",
     "\n",
     "\n",
     "def name_to_apa(full_name: str) -> str:\n",
-    "    \"\"\"\n",
-    "    Convert 'First Middle Last' -> 'Last, F. M.'\n",
-    "    Handles simple cases well. Complex surnames may not be perfect.\n",
-    "    \"\"\"\n",
-    "    parts = [p for p in full_name.split() if p]\n",
+    "    \"\"\"Convert 'First Middle Last' -> 'Last, F. M.' (simple heuristic).\"\"\"\n",
+    "    parts = [p for p in (full_name or \"\").split() if p]\n",
+    "    if len(parts) == 0:\n",
+    "        return \"\"\n",
     "    if len(parts) == 1:\n",
     "        return parts[0]\n",
+    "\n",
     "    last = parts[-1]\n",
     "    initials = []\n",
     "    for p in parts[:-1]:\n",
-    "        # keep first character for initials, ignore punctuation\n",
     "        ch = re.sub(r\"[^A-Za-zÀ-ÖØ-öø-ÿ]\", \"\", p)[:1]\n",
     "        if ch:\n",
     "            initials.append(ch.upper() + \".\")\n",
@@ -110,100 +109,87 @@
     "\n",
     "def format_authors_apa(authors):\n",
     "    \"\"\"\n",
-    "    APA 7-ish:\n",
-    "    - Up to 20 authors: list all, with '&' before last.\n",
-    "    - More than 20: first 19, …, last (APA exact rule uses ellipsis).\n",
+    "    APA 7-ish author list formatting.\n",
+    "    - Up to 20 authors: list all, '&' before last.\n",
+    "    - More than 20: first 19, …, last.\n",
     "    \"\"\"\n",
     "    if not authors:\n",
-    "        return \"\"  # We will omit authors if missing\n",
+    "        return \"\"\n",
     "\n",
-    "    apa = [name_to_apa(a) for a in authors]\n",
+    "    apa = [name_to_apa(a) for a in authors if a]\n",
+    "    apa = [a for a in apa if a]\n",
     "\n",
+    "    if len(apa) == 0:\n",
+    "        return \"\"\n",
     "    if len(apa) <= 2:\n",
     "        return \" & \".join(apa)\n",
     "    if len(apa) <= 20:\n",
     "        return \", \".join(apa[:-1]) + \", & \" + apa[-1]\n",
     "\n",
-    "    # >20\n",
     "    first_19 = apa[:19]\n",
     "    last = apa[-1]\n",
     "    return \", \".join(first_19) + \", …, \" + last\n",
     "\n",
     "\n",
     "def extract_info(work):\n",
-    "    title = _norm(work.get(\"title\", {}).get(\"title\", {}).get(\"value\"))\n",
-    "    subtitle = _norm(work.get(\"title\", {}).get(\"subtitle\", {}).get(\"value\"))\n",
+    "    \"\"\"Extract fields needed for an APA-like reference (with safe None-handling).\"\"\"\n",
+    "    title_obj = work.get(\"title\") or {}\n",
+    "    title = _norm((title_obj.get(\"title\") or {}).get(\"value\"))\n",
+    "    subtitle = _norm((title_obj.get(\"subtitle\") or {}).get(\"value\"))\n",
     "    if subtitle:\n",
     "        title = f\"{title}: {subtitle}\" if title else subtitle\n",
     "\n",
-    "    journal = _norm(work.get(\"journal-title\", {}).get(\"value\"))\n",
-    "    work_type = _norm(work.get(\"type\"))  # e.g., JOURNAL_ARTICLE\n",
+    "    journal = _norm((work.get(\"journal-title\") or {}).get(\"value\"))\n",
+    "    work_type = _norm(work.get(\"type\"))\n",
     "\n",
-    "    pub_date = work.get(\"publication-date\", {}) or {}\n",
-    "    year = pub_date.get(\"year\", {}).get(\"value\")\n",
-    "    month = pub_date.get(\"month\", {}).get(\"value\")\n",
-    "    day = pub_date.get(\"day\", {}).get(\"value\")\n",
+    "    pub_date = work.get(\"publication-date\") or {}\n",
+    "    year = ((pub_date.get(\"year\") or {}).get(\"value\")) or None\n",
     "\n",
     "    ext = extract_external_ids(work)\n",
     "    doi = ext.get(\"doi\")\n",
     "    doi_url = None\n",
     "    if doi:\n",
-    "        # If it's already a URL, keep it; otherwise build doi.org link\n",
-    "        doi_url = doi if doi.startswith(\"http\") else f\"https://doi.org/{doi}\"\n",
+    "        doi_url = doi if str(doi).startswith(\"http\") else f\"https://doi.org/{doi}\"\n",
     "\n",
-    "    url = ext.get(\"url\") or ext.get(\"uri\")  # sometimes people store a URL as ext-id\n",
+    "    # sometimes people store a direct URL as an external-id\n",
+    "    fallback_url = ext.get(\"url\") or ext.get(\"uri\")\n",
+    "    if fallback_url and not str(fallback_url).startswith(\"http\"):\n",
+    "        fallback_url = None\n",
     "\n",
     "    authors = extract_contributors(work)\n",
     "\n",
     "    return {\n",
     "        \"authors\": authors,\n",
     "        \"year\": year,\n",
-    "        \"month\": month,\n",
-    "        \"day\": day,\n",
     "        \"title\": title,\n",
     "        \"journal\": journal,\n",
     "        \"type\": work_type,\n",
     "        \"doi_url\": doi_url,\n",
-    "        \"fallback_url\": url,\n",
+    "        \"fallback_url\": fallback_url,\n",
     "    }\n",
     "\n",
     "\n",
     "def apa_reference(rec):\n",
     "    \"\"\"\n",
     "    Best-effort APA-style reference:\n",
-    "    Authors. (Year). Title. Journal. https://doi.org/...\n",
-    "    If journal missing, we omit it.\n",
-    "    If authors missing, start with title.\n",
+    "    Authors. (Year). Title. Journal. DOI/URL\n",
+    "    If authors missing, start with Title. (Year).\n",
     "    \"\"\"\n",
     "    authors_str = format_authors_apa(rec[\"authors\"])\n",
     "    year = rec[\"year\"] or \"n.d.\"\n",
     "    title = rec[\"title\"] or \"Untitled work\"\n",
     "    journal = rec[\"journal\"]\n",
     "\n",
-    "    # APA: sentence case for titles; we won't aggressively transform (risk messing proper nouns)\n",
     "    title_part = f\"{title}.\"\n",
-    "\n",
-    "    if authors_str:\n",
-    "        head = f\"{authors_str} ({year}). \"\n",
-    "    else:\n",
-    "        head = f\"{title_part} ({year}). \"\n",
-    "        title_part = \"\"  # already used as head\n",
-    "\n",
     "    journal_part = f\"{journal}. \" if journal else \"\"\n",
-    "    link = rec[\"doi_url\"] or rec[\"fallback_url\"]\n",
+    "    link = rec[\"doi_url\"] or rec[\"fallback_url\"] or \"\"\n",
     "\n",
-    "    link_part = f'{link}' if link else \"\"\n",
-    "\n",
-    "    # Build final\n",
     "    if authors_str:\n",
-    "        ref = f\"{head}{title_part} {journal_part}{link_part}\".strip()\n",
+    "        ref = f\"{authors_str} ({year}). {title_part} {journal_part}{link}\".strip()\n",
     "    else:\n",
-    "        # Title already included before (Year)\n",
-    "        ref = f\"{head}{journal_part}{link_part}\".strip()\n",
+    "        ref = f\"{title_part} ({year}). {journal_part}{link}\".strip()\n",
     "\n",
-    "    # Clean double spaces\n",
-    "    ref = re.sub(r\"\\s{2,}\", \" \", ref)\n",
-    "    return ref\n",
+    "    return re.sub(r\"\\s{2,}\", \" \", ref)\n",
     "\n",
     "\n",
     "def render_apa_list(records):\n",
@@ -211,26 +197,20 @@
     "    for rec in records:\n",
     "        ref = apa_reference(rec)\n",
     "\n",
-    "        # turn DOI/URL at end into clickable link if present\n",
-    "        if rec[\"doi_url\"]:\n",
-    "            link = rec[\"doi_url\"]\n",
-    "            safe = ref.replace(link, f'<a href=\"{link}\" target=\"_blank\">{link}</a>')\n",
-    "        elif rec[\"fallback_url\"] and rec[\"fallback_url\"].startswith(\"http\"):\n",
-    "            link = rec[\"fallback_url\"]\n",
-    "            safe = ref.replace(link, f'<a href=\"{link}\" target=\"_blank\">{link}</a>')\n",
-    "        else:\n",
-    "            safe = ref\n",
+    "        # make DOI/URL clickable\n",
+    "        link = rec[\"doi_url\"] or rec[\"fallback_url\"]\n",
+    "        if link:\n",
+    "            ref = ref.replace(link, f'<a href=\"{link}\" target=\"_blank\">{link}</a>')\n",
     "\n",
-    "        items.append(f\"<li style='margin: 0.4em 0;'>{safe}</li>\")\n",
+    "        items.append(f\"<li style='margin: 0.4em 0;'>{ref}</li>\")\n",
     "\n",
-    "    html = \"\"\"\n",
+    "    html = f\"\"\"\n",
     "    <div style=\"line-height:1.55;\">\n",
     "      <ol style=\"padding-left: 1.3em; margin: 0.2em 0;\">\n",
-    "        %s\n",
+    "        {''.join(items)}\n",
     "      </ol>\n",
     "    </div>\n",
-    "    \"\"\" % \"\\n\".join(items)\n",
-    "\n",
+    "    \"\"\"\n",
     "    return HTML(html)\n",
     "\n",
     "\n",
