--- a/docs/publications.ipynb
+++ b/docs/publications.ipynb
@@ -14,7 +14,10 @@
    "id": "4cf95d24-6d63-4460-b490-cd50743a9f6b",
    "metadata": {
     "is_executing": true,
-    "nbsphinx": "hidden"
+    "nbsphinx": {
+     "execute": "always",
+     "hide_input": true
+    }
    },
    "outputs": [],
    "source": [
