--- a/docs/teaching.ipynb
+++ b/docs/teaching.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "I teach GIS, spatial analysis, and computational methods at the University of Helsinki. My teaching focuses on open science, reproducible spatial workflows, and learning by doing with real-world data. Many of my courses are fully open and used internationally as self-study resources and MOOCs. In most of my teachings I use open source solutions and Python programming. \n",
     "\n",
-    "### Courses\n",
+    "### University courses\n",
     "\n",
     "- **[Geo-Python](https://geo-python-site.readthedocs.io/)** — Introduction to Python for geospatial analysis (2023–), University of Helsinki  \n",
     "  An introductory course on Python programming with a focus on spatial data analysis. Topics include core Python concepts, geospatial data structures, data processing, and reproducible analysis workflows using open-source libraries. The course is offered as an open MOOC and is widely used beyond the university.\n",
@@ -36,9 +36,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07b129fb-d775-4daf-ba99-4f1c271707c5",
+   "metadata": {},
+   "source": [
+    "### Other training activities\n",
+    "\n",
+    "I provide open GIS and programming training through my YouTube channels in two languages, with a focus on educational videos, interactive tutorials, and practical examples. The aim is to make geospatial skills accessible beyond university settings and formal curricula.\n",
+    "\n",
+    "- **[MapSyntax](https://www.youtube.com/@MapSyntaxx)** — Educational videos and interactive GIS and programming tutorials in English\n",
+    "- **[MapSyntax (FA)](https://www.youtube.com/@mapsyntaxfarsi)** — Educational videos and interactive GIS and programming tutorials in Persian\n",
+    "\n",
+    "All non-university training materials, interactive content, and learning resources are collected at  \n",
+    "[https://mapsyntaxhub.com](https://mapsyntaxhub.com)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b3ff43d-01a7-47f6-b1d3-330385f12d6d",
+   "id": "6efe1e33-4544-40bd-a5da-0dd53622b869",
    "metadata": {},
    "outputs": [],
    "source": []
